--- a/app/templates/formulario.html
+++ b/app/templates/formulario.html
@@ -116,7 +116,7 @@
 					required
 					pattern="^(0[1-9]|[12][0-9]|3[01])\/(0[1-9]|1[0-2])\/\d{4}$"
 					title="Data inválida. Use o formato DD/MM/AAAA."
-					placeholder="YYYY-MM-DD">
+					placeholder="DD/MM/AAAA">
 				</div>
 
 				<div class="mb-3">
@@ -129,7 +129,7 @@
 					required
 					pattern="^(0[1-9]|[12][0-9]|3[01])\/(0[1-9]|1[0-2])\/\d{4}$"
 					title="Data inválida. Use o formato DD/MM/AAAA."
-					placeholder="YYYY-MM-DD">
+					placeholder="DD/MM/AAAA">
 				</div>
       </div>
       
