Altera o template que lista pedidos

--- a/app/templates/lista-pedidos.html
+++ b/app/templates/lista-pedidos.html
@@ -290,12 +290,13 @@
     <!-- Paginação -->
 <nav aria-label="Page navigation" class="mt-4">
   <ul class="pagination justify-content-center">
+    {# captura a query string bruta #}
+    {%- set qs = request.environ['QUERY_STRING'] -%}
+
     {% if pedidos.has_prev %}
       <li class="page-item">
         <a class="page-link"
-           href="{{ url_for('pedidos.exibir_pedidos',
-                            **request.args,
-                            page=pedidos.prev_num) }}">
+           href="{{ url_for('pedidos.exibir_pedidos') }}?{% if qs %}{{ qs }}&{% endif %}page={{ pedidos.prev_num }}">
           ⏪ Anterior
         </a>
       </li>
@@ -314,9 +315,7 @@
     {% if pedidos.has_next %}
       <li class="page-item">
         <a class="page-link"
-           href="{{ url_for('pedidos.exibir_pedidos',
-                            **request.args,
-                            page=pedidos.next_num) }}">
+           href="{{ url_for('pedidos.exibir_pedidos') }}?{% if qs %}{{ qs }}&{% endif %}page={{ pedidos.next_num }}">
           Próxima ⏩
         </a>
       </li>
